Add dockerized capybara

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
+    networks:
+      rails-network:
+        aliases:
+          - db.com
   web:
     build: .
     volumes:
@@ -12,3 +16,20 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    networks:
+      rails-network:
+        aliases:
+          - web.com
+  chrome:
+    image: selenium/standalone-chrome-debug:3.9.1-actinium
+    ports:
+      - "4444:4444"
+      - "5900:5900"
+    depends_on:
+      - web
+    networks:
+      rails-network:
+        aliases:
+          - chrome.com
+networks:
+  rails-network:
